--- a/franciss-prog/package.json
+++ b/franciss-prog/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "eslint": "^8",
