--- a/prisma-bun-brewcode/package.json
+++ b/prisma-bun-brewcode/package.json
@@ -33,6 +33,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.5.2",
 		"@types/jsonwebtoken": "^9.0.7",
 		"axios": "^1.7.7",
 		"bcrypt-ts": "^5.0.2",
